# ecs36c-hw3

./: CMakeLists.txt  Dockerfile  README.md  generate_submission.sh  main.cpp
autograder/: grade.sh
expected/bst/: 0.txt  1.txt
expected/tree/: 0.txt  1.txt
input/bst/: 0.txt  1.txt
input/tree/: 0.txt  1.txt
src/: CMakeLists.txt  datastructure.hpp  tree.cpp
